# cross-platform

./: CMakeLists.txt  CMakeUserPresets.json  build.sh  conanfile.txt  rtype
src/: main.cpp
